# NullexC

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: bitboard.h  types.h
data/: Position.c  Position.h  TTCluster.h  TTEntry.h  TranspositionTable.c  TranspositionTable.h
functions/attacks/: AttackMasks.c  AttackMasks.h
functions/benchmark/: Perft.c  Perft.h
functions/evaluation/: Evaluate.c  Evaluate.h  SEE.c  SSE.h
functions/hash/: ZobristHash.c  ZobristHash.h
functions/moves/: MoveApplication.c  MoveApplication.h  MoveGeneration.c  MoveGeneration.h
functions/rules/: Check.c  Check.h
functions/search/: MoveOrdering.c  MoveOrdering.h  Time.c  Time.h
uci/: Uci.c  Uci.h  UciParser.c  UciParser.h  UciUtils.c  UciUtils.h
